# kensa

./: .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .pre-commit.yaml  .rule_dedup_baseline.json  .secrets.baseline  .specter-results.json  ACCESS_CONTROL_REVIEW_PLAN.md  AUDIT_REVIEW_PLAN.md  BACKLOG.md  CANONICAL_RULE_SCHEMA_V0.md  CHANGELOG.md  CIS_RHEL8_MISSING_RULES.md  CIS_RHEL9_MISSING_RULES.md  CLAUDE.md  CONTRIBUTING.md  KEYS  LICENSE  Makefile  NIST_800-53_AEGIS_CONTROLS.md  README.md  RULES_CHANGELOG.md  RULE_REVIEW_GUIDE_V0.md  SECURITY.md  SERVICES_REVIEW_PLAN.md  SESSION_LOG.md  SPECTER_BUG.md  SPECTER_FEATURE_REQUEST.md  STIG_RHEL8_MISSING_RULES.md  STIG_RHEL9_MISSING_RULES.md  TECHNICAL_REMEDIATION_MP_V0.md  TECH_DEBT.md  VERSIONING_PLAN.md  aegis  aegis.spec  consolidate_manifest.yaml  go-test.json  go.mod  go.sum  (+8 more)
.claude/commands/: cis.md  fedramp.md  keb.md  review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
api/: concurrency.go  deadman.go  doc.go  envelope_verifier.go  errors.go  event_rule_id_test.go  events.go  handler.go  kensa.go  kensa_test.go  log_query.go  planner.go  scan.go  scanner_overrides_test.go  transaction.go  transport.go
catalog/: baseline.json
catalog/sources/: manifest.json  verifications.json
cmd/comment-lint/: main.go
cmd/kensa/: agent.go  agent_e2e_test.go  agent_test.go  allow_conflicts_test.go  capability_flag.go  capability_flag_test.go  category_flag.go  category_flag_test.go  check_param_corpus_test.go  completion.go  completion_test.go  configdir_resolve.go  configdir_resolve_test.go  control_flag.go  control_flag_test.go  coverage_report.go  coverage_report_test.go  delimiter_corpus_test.go  deprecation_test.go  diff.go  diff_test.go  errors.go  fanout.go  fanout_test.go  flags.go  flags_test.go  framework_flag.go  framework_flag_test.go  help_groups.go  history_jsonl_test.go  history_prune.go  history_prune_test.go  (+57 more)
cmd/kensa-catalog/: main.go  main_test.go
cmd/kensa-fuzz/: deadman_fuzz_test.go  fuzz_integration_test.go  main.go
cmd/kensa-keygen/: main.go  main_test.go
cmd/kensa-systemd-helper/: dbusops.go  dbusops_test.go  main.go  main_test.go
cmd/kensa-validate/: main.go  spec_test_refs_test.go
config/: defaults.yml  inventory.yml.example
context/: architecture.md  patterns.md  security.md
docs/: .gitignore  ADMIN_GUIDE.md  AEGIS_Developer_Guide_v1.0.0.md  AUDITOR_GUIDE.md  BENCHMARK_DISAGREEMENT_PLAN.md  COMPLIANCE_PHILOSOPHY.md  KENSALABS.md  KENSA_API_DOC.md  KENSA_Developer_Guide_v1.0.0.md  KENSA_GO_DAY1_PLAN.md  KENSA_OPENWATCH_COORDINATION_2026-04-14.md  KENSA_OPENWATCH_PROGRESS_2026-04-15.md  KENSA_OPENWATCH_RESPONSE_2026-04-14.md  NEW_SESSION_LOG.md  PLAN_TRACKER.md  QUICKSTART.md  REMEDIATION_SAFETY.md  RULE_CONSOLIDATION_PLAN.md  RULE_REVIEW_GUIDE_V1.md  SUPPORT_MATRIX.md  TECHNICAL_REMEDIATION_MP_V1.md  TRANSACTION_CONTRACT_V1.md  TYPED_MECHANISM_MIGRATION_PLAN.md  cis_rhel9_v2_benchmark.yml
man/: gen-manpage.go  gen-manpage_test.go  kensa.1  kensa.1.footer.roff  kensa.1.header.roff
packaging/: postinst.sh  postinst_test.go  sudoers-kensa-systemd-helper
prd/: IMPLEMENTATION_PLAN.md  p0-2-test-suite.md  p0-test-runner-core.md  p1-1-output-formats.md  p1-2-full-handler-coverage.md  p1-3-platform-filtering.md  p1-4-capability-overrides.md  p1-5-handler-modularization.md  p1-parallel-execution.md  p2-1-result-persistence.md  p2-2-diff-reporting.md  p2-3-framework-mappings.md  p2-4-conflict-detection.md  p2-5-validation-modularization.md  p2-dependency-ordering.md  p3-1-framework-mapping-enhancements.md  p3-2-rule-scaling.md  p4-1-openwatch-integration.md  p5-1-rollback-enterprise.md
rules/: README.md  defaults.yml
runner/: __main__.py  _capture.py  _checks.py  _config.py  _host_runner.py  _loading.py  _orchestration.py  _remediation.py  _rollback.py  _rule_selection.py  _selection.py  _types.py  cli.py  conflicts.py  detect.py  engine.py  inventory.py  mappings.py  ordering.py  paths.py  risk.py  rule_info.py  shell_util.py  ssh.py  storage.py
schema/: __init__.py  rule.schema.json  spec.schema.json  validate.py  validate_specs.py
schemas/: kensa-evidence-v1.schema.json
scripts/: add_ubuntu_pkg_impls.py  apply_cis_cross_distro.py  apply_crosswalk_extends.py  bench_aggregate.go  cis_section_compare.py  cis_validate.py  cli-smoke.sh  consolidate_rules.py  coverage_report.py  docs_check.sh  extract_cis_rhel8_sot.py  extract_cis_rhel9_sot.py  fedramp_validate.py  fix_stig_vids.py  gap_analysis.py  generate_cis_baseline.py  generate_cis_rules.py  generate_man_pages.py  map_cis_controls.py  migrate_framework_refs.py  new_rule_check.py  no-conflict-markers.sh  parity_check.go  parse_fedramp_oscal.py  review_server.py  rule_dedup_check.py  rule_dedup_validate.py  setup-signing-keys.sh  spec_coverage.py  spec_traceability.py  split_combined_sysctl.py  status.sh  sync_cis_mappings.py  update_changelog.py  verify_cis_rhel8_sot.py  verify_cis_rhel9_sot.py
specs/: SPEC_REGISTRY.md  rules.spec.yaml  system.spec.yaml
tests/: conftest.py  test_benchmark.py  test_capture_command_spec.py  test_capture_config_spec.py  test_capture_file_spec.py  test_capture_package_spec.py  test_capture_security_spec.py  test_capture_service_spec.py  test_capture_system_spec.py  test_cli.py  test_cli_info.py  test_cli_remediation_persistence.py  test_cli_retention.py  test_cli_rollback.py  test_cli_snapshot.py  test_cli_spec.py  test_config.py  test_detect.py  test_detect_capability_spec.py  test_engine_checks.py  test_engine_loading.py  test_engine_remediation.py  test_evidence_output.py  test_framework_mappings_spec.py  test_gap_analysis.py  test_host_resolution_spec.py  test_host_runner_spec.py  test_inventory.py  test_orchestration_evaluate.py  test_orchestration_remediate.py  test_orchestration_rollback.py  test_output_formatter_spec.py  test_packaging_smoke.py  test_remediation_audit_rule_set.py  test_risk.py  test_risk_classification_spec.py  test_rollback_command_spec.py  test_rollback_config_spec.py  test_rollback_file_spec.py  test_rollback_package_spec.py  (+13 more)
(+1752 files in other folders)
